add max to banner desc

--- a/practice-two/src/styles/layouts/banner.scss
+++ b/practice-two/src/styles/layouts/banner.scss
@@ -19,6 +19,10 @@
    margin-top: toRem(4px);
   }
 
+  &__desc {
+    max-width: toRem(545px);
+  }
+
   &__img {
     background-image: url('../assets/images/banners/bg-banner.svg');
     @include min-size(toRem(390px), toRem(448px));
