--- a/practice-two/src/styles/layouts/banner.scss
+++ b/practice-two/src/styles/layouts/banner.scss
@@ -55,7 +55,7 @@
 
     &__content {
       padding: toRem(103px) 0;
-      max-width: 50%;
+      max-width: 596px;
       margin: 0;
       gap: toRem(32px);
     }
