--- a/practice-two/src/styles/layouts/footer.scss
+++ b/practice-two/src/styles/layouts/footer.scss
@@ -1,14 +1,12 @@
 .footer {
   background-color: $bg-secondary;
   margin-top: toRem(49.81px);
-  min-width: toRem(390px);
   font-family: Satoshi;
 
   &__contact {
     @extend %flexbox-items-space-between;
     @extend %flexbox-items-centered;
     flex-wrap: wrap;
-    width: math.div(1240, 1440) * 100%;
     min-width: toRem(358px);
     border-radius: toRem(20px);
     margin: 0 auto;
@@ -31,11 +29,11 @@
     }
 
     &-form {
-      @extend .btn;
+      border-radius: toRem(62px);
       background-image: url("../assets/images/footers/email-icon.svg");
       background-repeat: no-repeat;
       background-position: 10px 10px;
-      @include max-size(toRem(311px), toRem(42px));
+      @include min-size(toRem(311px), toRem(42px));
       padding: 2px 50px;
     }
   }
@@ -144,7 +142,7 @@
     }
 
     &__list {
-      grid-template-columns: 1fr 1fr 1fr 1fr;
+      grid-template-columns: auto auto auto auto;
       grid-template-rows: auto;
       gap: toRem(113.15px);
     }
