--- a/practice-two/src/styles/layouts/sign-up.scss
+++ b/practice-two/src/styles/layouts/sign-up.scss
@@ -5,8 +5,7 @@
 
   &__item {
     margin: 0 auto;
-    font-size: 20px;
-    min-width: toRem(390px);
+    font-size: toRem(20px);
   }
 
   &__desc {
