--- a/practice-two/src/styles/modules/evaluate.scss
+++ b/practice-two/src/styles/modules/evaluate.scss
@@ -17,10 +17,7 @@
 }
 
 .evaluate-comment {
-  @extend %flexbox-items-centered;
-  width: toRem(118px);
-  justify-content: space-between;
-
+  width: auto;
   &__img {
     @include img-size(toRem(19.19px));
   }
@@ -40,10 +37,6 @@
   }
 
   .evaluate-comment {
-    width: toRem(138.84px);
-    height: toRem(22.58px);
-    margin-bottom: toRem(15px);
-
     &__img {
       @include img-size(toRem(22.58px));
     }
