--- a/practice-two/src/styles/modules/price.scss
+++ b/practice-two/src/styles/modules/price.scss
@@ -2,6 +2,7 @@
   @extend %flexbox-items-centered;
   font-size: 1rem;
   font-weight: 700;
+  margin-top: toRem(4px);
   gap: toRem(5px);
 
   &__sell {
@@ -22,6 +23,8 @@
 @media (min-width: 1440px) {
 
   .price {
+    gap: toRem(10px);
+    margin-top: toRem(8px);
     font-size: toRem(24px);
   }
 }
