--- a/practice-two/src/styles/layouts/banner.scss
+++ b/practice-two/src/styles/layouts/banner.scss
@@ -9,11 +9,16 @@
     margin: 0 auto;
   }
 
+  &__title {
+    width: 100%;
+  }
+
   &__content {
     @extend %flexbox-items-wraped;
-    padding: toRem(40px) toRem(12px) 0 toRem(12px);
+    padding: toRem(40px) math.div(16, 390) * 100% 0;
     gap: toRem(20px);
-    }
+    margin: 0 auto;
+  }
 
   &__btn {
     margin-top: toRem(4px);
@@ -25,8 +30,10 @@
 
   &__img {
     background-image: url('../assets/images/banners/bg-banner.svg');
+    background-repeat: no-repeat;
     @include min-size(toRem(390px), toRem(448px));
     @extend %flexbox-items-space-between;
+    margin: 0 auto;
   }
 
   &__img-left {
@@ -45,21 +52,19 @@
     background-image: url('../assets/images/banners/rectangle.png');
     background-repeat: no-repeat;
     background-position: center;
-    margin: 0 auto;
     flex-wrap: nowrap;
 
     &__wrapper {
       margin: 0 auto;
       flex-wrap: nowrap;
-      max-height: toRem(663px);
-      width: 1240px;
     }
 
     &__content {
       padding: toRem(103px) 0;
-      min-width: 596px;
-      margin: 0;
+      min-width: toRem(596px);
       gap: toRem(32px);
+      width: math.div(358, 390) * 50%;
+      text-align: left;
     }
 
     &__btn {
@@ -69,9 +74,7 @@
 
     &__img {
       background-image: none;
-      max-height: 100%;
-      min-width: 744px;
-      width: 100%;
+      min-width: toRem(744px);
     }
 
     &__img-left {
