--- a/practice-two/src/styles/layouts/container.scss
+++ b/practice-two/src/styles/layouts/container.scss
@@ -1,10 +1,9 @@
 .container {
-  width: 358px;
   margin: 0 auto;
 }
 
 @media (min-width: 1440px) {
   .container {
-    width: 1240px;
+    max-width: 1240px;
   }
 }
