--- a/practice-two/src/styles/layouts/footer.scss
+++ b/practice-two/src/styles/layouts/footer.scss
@@ -7,17 +7,17 @@
     @extend %flexbox-items-space-between;
     @extend %flexbox-items-centered;
     flex-wrap: wrap;
-    min-width: toRem(358px);
     border-radius: toRem(20px);
     margin: 0 auto;
     background-color: $bg-color;
     color: $text-color;
-    padding: 32px 24px;
+    padding: toRem(32px) toRem(24px);
+    gap: toRem(32px);
+    width: math.div(358, 390) * 100%;
 
     &-desc {
-      max-width: toRem(551px);
       font-size: toRem(32px);
-      padding-bottom: toRem(32px);
+      flex-basis: 100%;
     }
 
     &-box {
@@ -26,6 +26,7 @@
       @include min-size(toRem(311px), toRem(96px));
       @include max-size(toRem(349px), toRem(108px));
       gap: toRem(12px);
+      margin: 0 auto;
     }
 
     &-form {
@@ -47,10 +48,16 @@
     font-size: toRem(14px);
     color: $primary-color;
     border-bottom: 1px solid $line-color;
+    width: math.div(358, 390) * 100%;
+    margin: 0 auto;
   }
 
   &__logo {
     @include img-size(toRem(144px), toRem(20px))
+  }
+
+  &__desc {
+    width: 100%;
   }
 
   &__list {
@@ -110,11 +117,13 @@
 
       &-desc {
         font-size: toRem(40px);
+        flex-basis: 50%;
       }
 
       &-box {
         @include min-size(toRem(349px), toRem(108px));
         gap: toRem(14px);
+        margin: 0;
       }
 
       &-form {
@@ -127,11 +136,14 @@
       flex-direction: column;
       justify-content: space-around;
       gap: toRem(14px);
-      max-width: toRem(248px);
     }
 
     &__logo {
       @include img-size(toRem(167px), toRem(23px))
+    }
+
+    &__desc {
+      width: toRem(248px);
     }
 
     &__action {
