--- a/practice-two/src/styles/modules/card.scss
+++ b/practice-two/src/styles/modules/card.scss
@@ -13,21 +13,24 @@
   &__primary {
     @extend %flexbox-items-wraped;
     justify-content: space-between;
-    min-width: toRem(198px);
-    min-height: toRem(283px);
+    @include min-size(toRem(198px), toRem(283px));
+    flex-basis: 25%;
 
     &-img {
-      @include img-size(toRem(198px), toRem(200px));
+      @include min-size(toRem(198px), toRem(200px));
+      @include max-size(toRem(295px), toRem(298px));
+      max-height: math.div(200, 198)* 100%;
+      height: auto;
       border-radius: toRem(12.42px);
     }
   }
 
   &__secondary {
     padding: toRem(24px);
-    min-width: toRem(358px);
-    min-height: toRem(186.19px);
+    @include min-size(toRem(358px), toRem(186.19px));
     border: 1px solid $line-color;
     border-radius: toRem(20px);
+
     &-img {
       @include img-size(toRem(15.44px));
     }
@@ -49,12 +52,13 @@
 
       &-img {
         border-radius: toRem(20px);
-        @include img-size(toRem(295px),toRem(298px));
+        @include img-size(toRem(295px), toRem(298px));
       }
     }
 
     &__secondary {
-      min-height: toRem(240px);
+      width: toRem(400px);
+      height: toRem(240px);
       padding: toRem(28px) toRem(32px);
 
       &-img {
