--- a/practice-two/src/styles/modules/info.scss
+++ b/practice-two/src/styles/modules/info.scss
@@ -5,7 +5,8 @@
   padding: 0 toRem(40px);
   gap: toRem(12px);
   column-gap: auto;
-  margin: 0 auto;
+  margin: auto;
+  width: 100%;
 
   &__item {
     padding: auto;
