--- a/practice-two/src/styles/layouts/footer.scss
+++ b/practice-two/src/styles/layouts/footer.scss
@@ -1,11 +1,12 @@
 .footer {
   background-color: $bg-secondary;
-  margin-top: toRem(49.81px);
   font-family: Satoshi;
+  min-width: 390;
 
   &__title {
-    margin: auto;
     font-size: toRem(32px);
+    margin: 0 auto;
+    line-height: toRem(35px);
   }
 
   &__contact {
@@ -13,49 +14,48 @@
     @extend %flexbox-items-centered;
     flex-wrap: wrap;
     border-radius: toRem(20px);
-    margin: 0 auto;
     background-color: $bg-color;
     color: $text-color;
     padding: toRem(32px) toRem(24px);
     gap: toRem(32px);
     width: math.div(358, 390) * 100%;
-
-    &-desc {
-      font-size: toRem(32px);
-      flex-basis: 100%;
-    }
+    margin-bottom: toRem(31.58px);
 
     &-box {
-      @extend %flexbox-items-space-between;
-      flex-wrap: wrap;
-      @include min-size(toRem(311px), toRem(96px));
-      @include max-size(toRem(349px), toRem(108px));
+      display: flex;
+      flex-direction: column;
       gap: toRem(12px);
       margin: 0 auto;
+      max-width: toRem(311px);
+      font-size: toRem(14px);
     }
 
     &-form {
       border-radius: toRem(62px);
       background-image: url("../assets/images/footers/email-icon.svg");
       background-repeat: no-repeat;
-      background-position: 10px 10px;
-      @include min-size(toRem(311px), toRem(42px));
-      padding: 2px 50px;
+      background-position: center left;
+      background-position: toRem(10px);
+      padding: toRem(11.5px)toRem(112px)toRem(11.5px)toRem(48px);
       border: 1px solid $secondary-color;
+      min-height: toRem(42px);
     }
   }
 
+  &__btn {
+    padding: toRem(11.5px) toRem(80.5px);
+  }
+
   &__action {
-    @extend .container;
     @extend %flexbox-items-space-between;
     flex-wrap: wrap;
-    padding: toRem(50px) toRem(0px) toRem(40px) toRem(0px);
-    gap: toRem(24px);
+    gap: toRem(24.42px);
     font-size: toRem(14px);
     color: $primary-color;
     border-bottom: 1px solid $line-color;
     width: math.div(358, 390) * 100%;
     margin: 0 auto;
+    padding-bottom: toRem(40px);
   }
 
   &__logo {
@@ -66,7 +66,7 @@
     width: 100%;
   }
 
-  &__list {
+  &__group {
     width: 100%;
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -99,10 +99,11 @@
 
   .copyright {
     @extend .container;
-    margin-top: toRem(16px);
     margin-bottom: toRem(77.26px);
+    margin-top: toRem(16px);
     @extend %flexbox-items-centered;
     flex-wrap: wrap;
+    flex-direction: column;
     justify-content: center;
     gap: toRem(16px);
     font-size: toRem(14px);
@@ -116,31 +117,33 @@
 
 @media (min-width: 1440px) {
   .footer {
-    margin-top: toRem(80.42px);
-
     &__title {
       margin: 0;
       font-size: toRem(40px);
-      padding-right:212px ;
+      flex-basis: 50%;
     }
 
     &__contact {
-      padding: toRem(43px) toRem(64px);
-
-      &-desc {
-        font-size: toRem(40px);
-        flex-basis: 50%;
-      }
+      padding: toRem(36px) toRem(64px);
+      margin-bottom: toRem(50px);
+      font-size: toRem(16px);
 
       &-box {
-        @include min-size(toRem(349px), toRem(108px));
+        min-width: toRem(349px);
         gap: toRem(14px);
         margin: 0;
+        font-size: toRem(16px);
       }
 
       &-form {
-        @include min-size(toRem(349px), toRem(48px))
+        min-height: toRem(52px);
+        font-weight: 400;
       }
+    }
+
+    &__btn {
+      padding: toRem(15.5px) toRem(88.5px);
+      max-height: toRem(52px);
     }
 
     &__item {
@@ -165,17 +168,18 @@
       padding-bottom: toRem(50px);
     }
 
-    &__list {
+    &__group {
       grid-template-columns: auto auto auto auto;
       grid-template-rows: auto;
       gap: toRem(113.15px);
     }
 
     .copyright {
+      flex-direction: row;
       font-size: toRem(16px);
       justify-content: space-between;
-      margin-top: toRem(25px);
-      margin-bottom: toRem(88px);
+      margin-top: toRem(20px);
+      margin-bottom: toRem(81.97px);
 
       &__img {
         @include img-size(toRem(46.61px), toRem(30.03px))
