fix comment component desc and fix UI banner

--- a/practice-two/src/styles/layouts/banner.scss
+++ b/practice-two/src/styles/layouts/banner.scss
@@ -7,6 +7,7 @@
     @extend %flexbox-items-space-between;
     @extend %flexbox-items-wraped;
     margin: auto;
+    width: 390px;
   }
 
   &__title {
@@ -22,19 +23,17 @@
 
   &__btn {
     margin-top: toRem(4px);
-    padding: 15px 141.5px;
-    margin: 0 auto;
-    width: 100%;
+    padding: toRem(15px)toRem(141.5px);
   }
 
   &__desc {
-    // max-width: toRem(545px);
     width: 100%;
     margin: auto;
+    font-size: toRem(16px);
   }
 
   &__img {
-    background-image: url('../assets/images/banners/Rectangle 2.svg');
+    background-image: url('../assets/images/banners/bg-banner.png');
     background-repeat: no-repeat;
     @include min-size(toRem(390px), toRem(448px));
     @extend %flexbox-items-space-between;
@@ -62,6 +61,7 @@
     &__wrapper {
       margin: 0 auto;
       flex-wrap: nowrap;
+      width: 100%;
     }
 
     &__content {
@@ -73,8 +73,10 @@
     }
 
     &__btn {
+      padding: toRem(15px) toRem(67.5px);
       margin-top: toRem(0px);
       margin-bottom: toRem(16px);
+      @include min-size(toRem(211px),toRem(52px));
     }
 
     &__img {
