--- a/practice-two/src/styles/layouts/arrival.scss
+++ b/practice-two/src/styles/layouts/arrival.scss
@@ -1,18 +1,18 @@
 .arrival {
-  padding-top: 50px;
-  padding-bottom: 40px;
+  padding-top: toRem(50px);
+  padding-bottom: toRem(40px);
   margin-left: math.div(16, 390) * 100%;
   text-align: center;
   border-bottom: 1px solid $line-color;
 
   &__title {
-    margin-bottom: 32px;
+    margin-bottom: toRem(32px);
   }
 
   &__products {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
-    gap: 16px;
+    gap: toRem(16px);
 
     overflow: auto;
 
@@ -22,29 +22,29 @@
   }
 
   &__product {
-    margin-bottom: 24px;
+    margin-bottom: toRem(24px);
     text-align: left;
   }
 
   &__btn {
-    padding: 13.5px 153.5px;
+    padding: toRem(13.5px)toRem(153.5px);
   }
 }
 
 @media (min-width: 1440px) {
   .arrival {
-    padding: 72px 0 64px 0;
+    padding: toRem(72px) toRem(0px) toRem(64px) toRem(0px);
 
     &__title {
-      margin-bottom: 55px;
+      margin-bottom: toRem(55px);
     }
 
     &__product {
-      margin-bottom: 36px;
+      margin-bottom: toRem(36px);
     }
 
     &__btn {
-      padding: 15px 80px;
+      padding: (15px) toRem(80px);
     }
   }
 }
