--- a/practice-two/src/styles/layouts/banner.scss
+++ b/practice-two/src/styles/layouts/banner.scss
@@ -27,7 +27,7 @@
   }
 
   &__desc {
-    font-size: toRem(16px);
+    font-size: toRem(14px);
     text-align: left;
     margin: 0 auto;
   }
@@ -78,6 +78,10 @@
       margin-bottom: toRem(16px);
       @include min-size(toRem(211px),toRem(52px));
       margin: 0;
+    }
+
+    &__desc {
+      font-size: toRem(16px);
     }
 
     &__img {
